2005-09-14  Richard Henderson  <rth@redhat.com>

	* config/ia64/vect.md (addv2sf3, subv2sf3): Rewrite as expand.
	(addv2sf3_1, addv2sf3_2, subv2sf3_1, subv2sf3_2): New.

2005-09-14  Andrew Pinski  <pinskia@physics.uc.edu>

	* config/i386/i386.c (contains_128bit_aligned_vector_p): Add break
	in the ARRAY_TYPE case.

2005-09-14  Eric Botcazou  <ebotcazou@adacore.com>

	* tree.c (substitute_in_expr, case 4): New case, for ARRAY_REF.

2005-09-14  Uros Bizjak  <uros@kss-loka.si>

	PR middle-end/22480
	* tree-vect-transform.c (vectorizable_operation): Return false for
	scalar shift operations and for vector shift operations with
	non-invariant shift arguments.  Use scalar tree operand op1 as
	a shift operand when vector shift insn pattern uses scalar shift
	operand.
	* Makefile.in (tree-vect-transform.o): Depend on recog.h.

2005-09-14  Olivier Hainque  <hainque@adacore.com>

	* gimplify.c (gimplify_init_ctor_eval): Don't discard a zero-sized
	value if it has side-effects.

2005-09-14  David Edelsohn  <edelsohn@gnu.org>

	PR target/22068
	* config/rs6000/rs6000.md (muldi3): Add mulli alternative.

2005-09-14  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/linux64.h (DBX_OUTPUT_BRAC): Treat function name
	passed as NAME as if it were label at start of function code.

2005-09-13  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.md (*movv4sf_i): Add general register cases to
	the constraints.

2005-09-13  Andrew Pinski  <pinskia@physics.uc.edu>

	* config/rs6000/darwin.md (movdf_low_si): Mark the outgoing r constraint
	as early clobber.  Rewrite so the PIC register is not implicitly used.

2005-09-13  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* tree.c (annotate_with_file_line): Compare line numbers before
	file names.

2005-09-13  Uros Bizjak  <uros@kss-loka.si>

	PR target/23816
	* config/i386/sse.md (*ieee_sminv4sf3, *ieee_smaxv4sf3)
	(*ieee_sminv2df3, *ieee_smaxv2df3): New insn patterns.

2005-09-13  Ian Lance Taylor  <ian@airs.com>
