@@ -1,3 +1,9 @@
+2005-09-14  Daniel Berlin  <dberlin@dberlin.org>
+
+	PR tree-optimization/23835
+	* tree-ssa-alias.c (sort_pointers_by_pt_vars): New function.
+	(create_name_tags): Rewrite to be not O(num_ssa_names^2).
+
 2005-09-14  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/vect.md (addv2sf3, subv2sf3): Rewrite as expand.
